changed gitignore changes yaml docs indentation
